--- a/FrontEnd/templates/Games.html
+++ b/FrontEnd/templates/Games.html
@@ -67,89 +67,88 @@
 		}
 
         @media screen and (max-width: 1024px) {
-    .GAMES {
-        margin-top: -45%;
-        margin-left: 24%;
+    .container {
+        margin-top: -40%;
+        margin-left: 4%;
     }
 }
 
 @media screen and (max-width: 970px) {
-    .GAMES {
-        margin-left: 20%;
-        margin-top: -65%;
+    .container {
+        margin-left: 10%;
+        margin-top: -50%;
     }
 }
 
 
         @media screen and (max-width: 820px) {
-    .GAMES {
-        margin-top: -65%;
-        margin-left: 24%;
+    .container {
+        margin-top: -50%;
+        margin-left: 13%;
         max-width: 720px;
     }
 }
 
         @media screen and (max-width: 768px) {
-    .GAMES {
-        margin-top: -65%;
-        margin-left: 22%;
+    .container {
+        margin-top: -60%;
+        /*margin-left: 13%;*/
         max-width: 552px;
     }
 }
 
 @media screen and (max-width: 540px) {
-    .GAMES {
-        margin-top: -116%;
-        margin-left: 28%;
-        max-width: 350px;
+    .container {
+        margin-top: -102%;
+        margin-left: 4%;
     }
 }
 
 @media screen and (max-width: 480px) {
-    .GAMES {
+    .container {
         margin-top: -108%;
-        margin-left: 48%;
+        margin-left: 24%;
         max-width: 326px;
     }
 }
 
 
 @media screen and (max-width: 414px) {
-    .GAMES {
-        margin-top: -121%;
-        margin-left: 32%;
-        width: 280px;
+    .container {
+        margin-top: -117%;
+        margin-left: 16%;
+        width: 381px;
     }
 }
 
 @media screen and (max-width: 375px) {
-    .GAMES {
-        margin-top: -130%;
-        margin-left: 40%;
-        width: 220px;
+    .container {
+        margin-top: -143%;
+        margin-left: 20%;
+        width: 720px;
     }
 }
 
 @media screen and (max-width: 320px) {
-    .GAMES {
+    .container {
         margin-top: -132%;
-        margin-left: 55%;
+        margin-left: 27%;
         max-width: 720px;
     }
 }
 
 @media screen and (max-width: 280px) {
-    .GAMES {
-        margin-top: -225%;
-        margin-left: 35%;
-        max-width: 200px
+    .container {
+        margin-top: -164%;
+        margin-left: 34%;
+        width:400px
     }
 }
 
 @media screen and (max-width: 200px) {
-    .GAMES {
+    .container {
         margin-top: -295%;
-        margin-left: 50%;
+        margin-left: 34%;
     }
 }
 
@@ -207,7 +206,7 @@
             width: 100%;
             max-width: 200px;
 			margin-left: -7%;
-			margin-top: 5%;
+			margin-top: 10%;
 		}
 
         @media screen and (max-width: 1024px) {
@@ -257,8 +256,8 @@
 
 @media screen and (max-width: 280px) {
         .filter-container {
-            width: 40%;
-            left: -28% !important;
+            width: 50%;
+            left: -23% !important;
     }
 }
 
@@ -566,14 +565,14 @@ margin-left:20%;
 @media screen and (max-width: 390px) {
     .result-text {
         left: 31%;
-        top: -240px;
+        top: -268px;
 
     }
 }
 
 @media screen and (max-width: 390px) {
     .checkbox-container {
-        top: -235px;
+        top: -265px;
     }
 }
 
@@ -634,126 +633,6 @@ padding: 2%;
 
 
 }
-
-
-
-@media only screen and (min-width: 1101px) and (max-width: 1499px) {
-
-.site-logo img{
-	position: relative;
-	padding-left: -45px;
-	}
-
-.main-menu{
-	margin-left: -10px;
-	}
-
-.left-nav-header{
-	margin-right: -45px;
-	}
-
-
-nav.main-menu li:hover > a span {
-    color: #ff069a;
-}
-
-nav.main-menu ul li:last-child a {
-padding: 10px;
-}
-
-}
-
-
-
-
-
-@media only screen and (min-width: 1500px) and (max-width: 2500px) {
-
-.main-menu{
-margin-left: -2220px;
-margin-right: 110px;
-	}
-
-.site-logo img{
-	margin-left: -20px;
-	margin-right: 20px
-	}
-
-.left-nav-header{
-	margin-right: -200px;
-	}
-
-nav.main-menu li:hover > a span {
-    color: #ff069a;
-}
-
-nav.main-menu ul li:last-child a {
-padding: 10px;
-}
-
-}
-
-
-
-
-@media only screen and (min-width: 901px) and (max-width: 1100px) {
-
-.main-menu{
-	margin-left: 20px;
-	margin top: 15px;
-	}
-
-
-.site-logo{
-	 margin-left: 0%;
-	 z-index:0;
-	 }
-
-.left-nav-header{
-	margin-right: -15px;
-	}
-
-.about-widget{
-margin-left:15px;
-}
-
-nav.main-menu li:hover > a span {
-    color: #ff069a;
-}
-
-nav.main-menu ul li:last-child a {
-padding: 10px;
-}
-
-}
-
-
-
-@media only screen and (min-width: 200px) and (max-width: 900px) {
-
-#footer{
-	 justify-content: space-between;
-	 padding-right: 20px;
-	 margin-left:0px;
-	 margin-right: 0px;
-	 margin-top: -33px;
-	}
-
- .site-logo img{
-	 width: 1000px;
-	 height: 90px;
-
-	 }
- .site-logo {
-	 margin-left: 5px;
-	 z-index:0;
-
-	 }
- .breadcrumb-text p{
-	  font-size: 12px;
-	 }
-
-}
     </style>
 
 </head>
@@ -778,12 +657,8 @@ padding: 10px;
 								<a href="{% url 'Games' %}">	<img src="{% static 'img/Games/GameGeek.png' %}" alt="logo">
 								</a>
 							</div>
-							<!-- logo -->
-
-							<!-- menu start -->
 							<nav class="main-menu">
 								<ul>
-
 									<li><a href=#>Games</a>
 										<ul class="sub-menu">
 											<li><a href="{% url 'Games' %}">All Games</a></li>
@@ -796,17 +671,17 @@ padding: 10px;
 									<li><a href="{% url 'contact' %}">Contact Us</a></li>
 									<li><a href="{% url 'about' %}">About Us</a></li>
 
-											<li id="NoHover" class="left-nav-header">
+								<li>
+									<div class="header-icons">
 
-										<a class=" sub-menu" ><i class="fa fa-user" aria-hidden="true" style="color:#06f7ff;"></i>&nbsp<span id="welcome" style="font-weight: 700 ">Hello</span></a>
-
-										<a class="boxed-btn sub-menu " id="login-btn" href="{% url 'LogoutUser' %}"  style="font-size: 20px;">Log Out</a>
-
+										<a class="boxed-btn" id="login-btn" href="{% url 'LogoutUser' %}"  style="font-size: 20px;" onclick="clearStorage()">Log Out</a>
+									</div>
 								</li>
 							</ul>
 						</nav>
 						<div class="mobile-menu"></div>
 						<!-- menu end -->
+						<div class="helloUserName"><i class="fa fa-user" aria-hidden="true"></i>&nbsp<span id="welcome" style="font-weight: 700;"></span></div>
 						<script>
 							$(document).ready(function() {
 
@@ -857,6 +732,11 @@ padding: 10px;
 			</div>
 		</div>
 	</div>
+	<!-- end breadcrumb section -->
+	<ul class="Realbreadcrumb">
+					<li class="breadcrumb-item"><a href="{% url 'Games' %}" >All Games</a></li>
+
+				 </ul>
 
 	<!-- games -->
 	<div class="product-section mt-150 mb-150">
@@ -991,7 +871,7 @@ function appendCheckboxesWithViewMore(container, checkboxes) {
     checkboxes.forEach(function (option, index) {
         const checkboxId = `${container.attr('id')}-checkbox-${index}`;
         container.append(`
-            <div class="form-check" style="padding-top:5.6% ;">
+            <div class="form-check" style='margin-top:2%; margin-bottom:2%; padding-top:2%; padding-bottom:1%;'>
                 <input  id="${checkboxId}" class="form-check-input" type="checkbox" value="${option}" data-category="${container.attr('id')}">
                 <label for="${checkboxId}"  class="form-check-label">${option}</label>
             </div>
@@ -1015,7 +895,7 @@ function appendRatingCheckboxes(container) {
     for (let rating = 1; rating <= 5; rating++) {
         const checkboxId = `${container.attr('id')}-checkbox-${rating}`; // Unique id for each checkbox
         container.append(`
-            <div class="form-check" >
+            <div class="form-check">
                 <input id="${checkboxId}" class="form-check-input" type="checkbox" value="${rating}" data-category="${container.attr('id')}">
                 <label for="${checkboxId}" class="form-check-label">${stars.repeat(rating)}</label>
             </div>
@@ -1066,18 +946,6 @@ $.ajax({
             if (b === "Others") return -1;
             return 0;
         });
-
-        // Append checkboxes with view more options
-        appendCheckboxesWithViewMore($('#Languages-options-container'), data.languages);
-        attachEventListeners();
-        EventListeners();
-    },
-    error: function () {
-        console.error('Failed to fetch language options.');
-    }
-});
-
-
 // Extract In-App Purchases
 $.ajax({
     url: '/BackEnd/ExtractInAppPurchases/',
@@ -1092,6 +960,20 @@ $.ajax({
         console.error('Failed to fetch In-App Purchase options.');
     }
 });
+
+
+
+        // Append checkboxes with view more options
+        appendCheckboxesWithViewMore($('#Languages-options-container'), data.languages);
+        attachEventListeners();
+        EventListeners();
+    },
+    error: function () {
+        console.error('Failed to fetch language options.');
+    }
+});
+
+
 
 // Extract Rating
 $.ajax({
@@ -1136,6 +1018,7 @@ $('.filter-container').on('change', '#Average_User_Rating-options-container inpu
 
 
 function clearAllFilters() {
+ $('#resultsForText').css('display', 'none'); // Set otherElement to display: none
 // To remove selected checkbox from local storage
 $('input[type="checkbox"]').each(function () {
 checkboxKey = $(this).attr('id');
@@ -1144,19 +1027,21 @@ isChecked = $(this).prop('checked');
 localStorage.removeItem(checkboxKey);
 });
 $('input[type="checkbox"]').removeAttr('checked');
+
 $("#sortSelect").prop('selectedIndex', 0);
-deleteSortFilter()
+handleSortChange();
+updateGamesByMultipleCategories(['Price', 'Genres', 'In_app_Purchases', 'Average_User_Rating', 'Languages', 'Rating']);
 EventListeners();
 
 }
 $('#clearFilters').on('click', clearAllFilters);
 $('#filter-btn').on('click', function() {
-
-    $('#myModal').css('display', 'none'); // Set otherElement to display: none
     clearAllFilters();
+    $('#myModal').css('display', 'none'); // Set otherElement to display: none
 });
 $('#login-btn').on('click', clearAllFilters);
     });
+
 
 
 
@@ -1210,19 +1095,22 @@ $('input[type="checkbox"]').each(function () {
         </div>
     </details>
 
-              <details class="category">
-                <summary>In-App Purchases</summary>
-                <div class="border-bottom pb-4 mb-4">
-                    <div class="d-grid gap-2" id="In_app_Purchases-options-container">
-                    </div>
-                </div>
-            </details>
+  <details class="category">
+    <summary>In-App Purchases</summary>
+    <div class="border-bottom pb-4 mb-4">
+        <div class="d-grid gap-2" id="In_app_Purchases-options-container">
+        </div>
+    </div>
+</details>
+
+
+
 
 
                 <details class="category">
                     <summary>Rating</summary>
-                    <div class="border-bottom pb-4 mb-4"style="margin-bottom:0rem !important;">
-                        <div class="d-grid gap-2" id="Average_User_Rating-options-container" >
+                    <div class="border-bottom pb-4 mb-4" style="margin-bottom: 0rem !important; padding-bottom:0rem !important;">
+                        <div class="d-grid gap-2" id="Average_User_Rating-options-container">
                         </div>
                     </div>
                 </details>
@@ -1405,26 +1293,6 @@ $('input[type="checkbox"]').each(function () {
             },
             error: function (error) {
                 console.error('Error making AJAX request:', error);
-            }
-        });
-    }
-    //function toDelete the tables
-    function deleteSortFilter(){
-
-        $.ajax({
-            url: '/BackEnd/delete_sorted_filtered/',
-            method: 'GET',
-            data: {
-
-            },
-             success: function() {
-             console.log('deleeeeeeeeeee');
-
-            makeAjaxRequest(1,1);
-
-        },
-            error: function(error) {
-                console.error('Error:', error);
             }
         });
     }
