game info img responsive , home page img responsive

--- a/FrontEnd/templates/index.html
+++ b/FrontEnd/templates/index.html
@@ -57,8 +57,9 @@
 
 
 		.hero-btns .boxed-btn{
-		width:30%;
+		width:50%;
 		}
+
 
 
 
@@ -84,7 +85,7 @@
     -webkit-text-fill-color: transparent;
     animation: textclip 2s linear infinite;
     display: inline-block;
-    font-size: 5vw; /* Adjust the value as needed */
+    font-size: 3rem; /* Adjust the value as needed */
     letter-spacing: 2vw; /* Adjust the value as needed */
     line-height: 1.5;
 }
@@ -237,7 +238,10 @@ display: none;
  display: block;
  margin-top: 10px;
  }
+
 }
+		body img{
+		max-width:100%;}
 	</style>
 
 </head>
@@ -366,7 +370,7 @@ display: none;
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-md-12">
-					<img src="{% static 'img/Games/logo.png' %}" alt="logo" class="fill-div-image" width="400" height="400">
+					<img src="{% static 'img/Games/logo.png' %}" alt="logo" class="fill-div-image" width="400" height="400" style="margin-left: -10%;">
 
 
 				</div>
