--- a/FrontEnd/templates/GameInfoPage.html
+++ b/FrontEnd/templates/GameInfoPage.html
@@ -192,7 +192,9 @@ padding: 10px;
 
 }
 
-
+body img{
+  max-width: 100%;
+}
 
 @media only screen and (min-width: 200px) and (max-width: 900px) {
 
